feat: add multithreading and major code refactor