@@ -1,34 +1,46 @@
 package blockchain;
 
 import java.util.LinkedList;
-import java.util.List;
-import java.util.stream.Collectors;
 
 public class BlockChain {
+    private volatile int numberOfZeros;
+    private final LinkedList<Block> blocks = new LinkedList<>();
 
-    private List<Block> blockChain;
-
-    public BlockChain() {
-        blockChain = new LinkedList<>();
+    public int getNumberOfZeros() {
+        return numberOfZeros;
     }
 
-    public void addBlock(int zeros) {
-        this.blockChain.add(new Block(blockChain.size() == 0 ? "0" : blockChain.get(blockChain.size() - 1).getHash(), zeros));
+    public Block getLastBlock() {
+        return blocks.isEmpty() ? null : blocks.getLast();
+    }
+
+    public synchronized boolean addBlock(Block block) {
+        String prevHash = block.getPrevHash();
+        String hash = block.getHash();
+
+        boolean isValid = hash.startsWith("0".repeat(numberOfZeros))
+                && prevHash.equals(blocks.isEmpty() ? "0" : blocks.getLast().getHash())
+                && StringUtil.applySha256(
+                block.getId() + block.getTimestamp() + block.getMagicNumber() + prevHash).equals(hash);
+
+        if (isValid) {
+            long generationTime = block.getGenerationTime();
+            if (generationTime < 10_000) {
+                numberOfZeros++;
+                block.setZerosChanges(numberOfZeros);
+            } else if (generationTime > 60_000) {
+                numberOfZeros--;
+                block.setZerosChanges(- numberOfZeros);
+            }
+            blocks.add(block);
+        }
+        return isValid;
     }
 
     @Override
     public String toString() {
-        return blockChain.stream()
-                .map(Block::toString)
-                .collect(Collectors.joining("\n"));
-    }
-
-    public boolean validateChain() {
-        String previous = "0";
-        for (Block b: blockChain) {
-            if (!b.getPreviousHash().equals(previous)) return false;
-            previous = b.getHash();
-        }
-        return true;
+        StringBuilder sb = new StringBuilder();
+        blocks.forEach(b -> sb.append(b.toString()).append("\n"));
+        return sb.toString();
     }
 }
